// 2.55 Change Log
// Updated 17th Feb, 2022

//Since A103

New QR: 'Block Triggers improved locking'
	Block triggers will not lock blocks in place as they normally do. Blocks on the
	same layer as the trigger will lock normally, but blocks on other layers will not
	lock until all triggers are covered (thus triggering secrets). At this time,
	ALL blocks on triggers will click into place.
	This QR is enabled in the 'Modern' ruleset.
Add "Counts as 'pushblock'" flag to 'SwitchHook Block' combos.
	The block will trigger block triggers / block holes when swapped.
Fix version warning popup on old quests
Fix: Subscreen 'Current Item Name' now respects bottle contents.
	( EmilyV, Feb 18th, 2022 )

Fix test mode prompt not closing on save
Add 'Note' itemclass; when used, displays a specified message string.
	( EmilyV, Feb 17th, 2022 )

-Feb 17th nightly

Fixed GUI issues with setting controls
Fix 'Esc' not acting as 'Cancel' properly in some dialogs
Fix 'Game->Gravity[GR_STRENGTH]' returning extremely high values
Add new SCCs:
	Menu SCCs allow creating a multiple-choice menu the player can select from
	'\29' allows exiting the current string (going to the next string, if any is set,
		without waiting for the player to press a button to advance)
	'\30' pauses the string, as normally happens between strings, waiting for player input.
	( EmilyV, Feb 17th, 2022 )

Fix tile grabbing palette issues
Fix palette editor dialog in small mode
	( Deedee, Feb 17th, 2022 )

//A103

Massively optimize ZC's draws to the screen. To give you an idea how massive this was,
	my uncapped FPS in a 'File->New' quest went from ~500 to ~2500. This also simultaneously
	fixes dialog flickering in ZC.
Screenshots now save into 'ZC Folder/snapshots/' instead of 'ZC Folder/'
	( EmilyV, Feb 15th, 2022 )

Reverse slash sprites
Bug net slash sprites
New Keese enemy options
Fix manhandla blocking sfx
	( Deedee, Feb 15th, 2022 )
