@@ -1,8 +1,9 @@
 // 2.55 Change Log
-// Updated 17th Feb, 2022
+// Updated 18th Feb, 2022
 
 //Since A103
 
+Slight GUI tweaks for QR dialog
 New QR: 'Block Triggers improved locking'
 	Block triggers will not lock blocks in place as they normally do. Blocks on the
 	same layer as the trigger will lock normally, but blocks on other layers will not
